fix: Input File test on mobile devices

--- a/app/home/info/info.module.scss
+++ b/app/home/info/info.module.scss
@@ -59,7 +59,8 @@
   align-items: center;
 
   width: 100%;
-  padding: 40px 0;
+  padding: 40px 10px;
+  text-align: center;
   // background-color: transparent;
   border-radius: 25px;
   // /outline: $black-75 dotted 2px;
